added Library objects and constructors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Author:   <input type="text" name="author" id="author"><br/>
         Pages:  <input type="text" name="pages" id ="pages"><br/>
         
-        <br><input type="button" value="Submit" onClick="print()">
+        <br><input type="button" value="Add New Book" id="submit">
     </form>
     
 
