--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         <br><input type="button" value="Add New Book" id="submit">
     </form>
     
+    <table id="container">
+        <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Pages</th>
+            <th>Read</th>
+        </tr>
+    </table>
+
+    <h2>
+        <input type="text" id="inputtitle">
+        <input type="text" id="inputauthor">
+        <input type="number" id="inputpages">
+    </h2>
+
 
       <div id= "display"></div>
 
