fixed object constructor so it could populated the empty Library array

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         Title:    <input type="text" name="title" id="title"><br/>
         Author:   <input type="text" name="author" id="author"><br/>
         Pages:  <input type="text" name="pages" id ="pages"><br/>
+        Read:  <input type="text" name="pages" id ="read"><br/>
         
         <br><input type="button" value="Add New Book" id="submit">
     </form>
@@ -33,6 +34,7 @@
             <td id="displayPages">Pages</td>
           </tr>
     </table>
+
 
 
 
