print the array on HTML site

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
             <td id="displayTitle">Title</td>
             <td id="displayAuthor">Author</td>
             <td id="displayPages">Pages</td>
+            <td id="displayRead">Read</td>
           </tr>
     </table>
 
-
-
-
+    <div id="displayBooks"></div>
       <script src= "script.js"></script>
 </body>
 
