--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <form >
 
-        Title:    <input type="text" name="title" id="title"><br/>
-        Author:   <input type="text" name="author" id="author"><br/>
-        Pages:  <input type="text" name="pages" id ="pages"><br/>
-        Read:  <input type="text" name="pages" id ="read"><br/>
+        Title:    <input type="text" name="title" id="title" minlength="3"><br/>
+        Author:   <input type="text" name="author" id="author" minlength="3"><br/>
+        Pages:  <input type="number" name="pages" id ="pages"><br/>
+        Read:  <input type="checkbox" name="read" id ="read"><br/>
         
         <br><input type="button" value="Add New Book" id="submit">
     </form>
@@ -29,7 +29,7 @@
             <th>Read</th>
         </tr>
         <tr>
-            <td id="displayTitle">Title</td>
+            <td id="displayTitle">Title</td>    
             <td id="displayAuthor">Author</td>
             <td id="displayPages">Pages</td>
             <td id="displayRead">Read</td>
