started on book cards

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </table>
 
     <div id="displayBooks"></div>
+    <div id="container"></div>
       <script src= "script.js"></script>
 </body>
 
