flex wrapped + content decisions made

--- a/index.html
+++ b/index.html
@@ -16,21 +16,14 @@
         Title:    <input type="text" name="title" id="title" minlength="3"><br/>
         Author:   <input type="text" name="author" id="author" minlength="3"><br/>
         Pages:  <input type="number" name="pages" id ="pages"><br/>
-        Read:  <input type="checkbox" name="read" id ="read"><br/>
+        <div id ="read"></div> 
         
         <br><input type="button" value="Add New Book" id="submit">
     </form>
   
         <div id="container"></div>
-        <tr>
-            <td id="displayTitle">Title</td>    
-            <td id="displayAuthor">Author</td>
-            <td id="displayPages">Pages</td>
-            <td id="displayRead">Read</td>
-          </tr>
-    </table>
 
-    <div id="displayBooks"></div>
+       <div id="displayBooks"></div>
 
     
       <script src= "script.js"></script>
